--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "dependencies": {
     "@heroicons/react": "^2.1.4",
     "@tailwindcss/forms": "^0.5.7",
-    "pg": "^8.10.0",  
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "^15.0.0",
     "next-auth": "5.0.0-beta.19",
+    "pg": "^8.10.0",
     "postcss": "8.4.38",
     "react": "19.0.0-rc-cd22717c-20241013",
     "react-dom": "19.0.0-rc-cd22717c-20241013",
@@ -35,4 +36,3 @@
     }
   }
 }
-
